force-app/main/default/objects/Account_Membership__c/Account_Membership__c.object-meta.xml
<CustomObject>
    <label>Individual Membership Assignment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Membership Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>