force-app/main/default/objects/Account_Membership__c/fields/Account_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Assignment_Date__c</fullName>
    <label>Account Assignment Date</label>
    <type>Date</type>
</CustomField>