force-app/main/default/objects/Account_Membership__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Memberships (Account Id)</relationshipLabel>
    <relationshipName>Account_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>