force-app/main/default/objects/Account_Membership__c/fields/Assigned_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Account_Name__c</fullName>
    <formula>Account_Id__r.FirstName + &quot; &quot; + Account_Id__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Account Name</label>
    <type>Text</type>
</CustomField>