force-app/main/default/objects/Account_Membership__c/fields/can_be_fully_reassigned__c.field-meta.xml
<CustomField>
    <fullName>can_be_fully_reassigned__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can be Fully Reassigned</label>
    <type>Checkbox</type>
</CustomField>