force-app/main/default/objects/Account_Membership__c/fields/Certification_Kit_Order__c.field-meta.xml
<CustomField>
    <fullName>Certification_Kit_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification Kit Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Individual Membership Assignments</relationshipLabel>
    <relationshipName>Individual_Membership_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>