force-app/main/default/objects/Account_Membership__c/fields/Certification_Kit_Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Certification_Kit_Order_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Deprecated) Certification Kit Order</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Certification Kit Order Summaries</relationshipLabel>
    <relationshipName>Account_Memberships1</relationshipName>
    <type>Lookup</type>
</CustomField>