force-app/main/default/objects/Account_Membership__c/fields/Days_Until_Exp__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Exp__c</fullName>
    <formula>IF(
   Expiration_Date__c  &gt;= TODAY(),
  Expiration_Date__c - TODAY(),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Exp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>