force-app/main/default/objects/Account_Membership__c/fields/Exemption_Status__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Status__c</fullName>
    <formula>&apos; &apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exemption Status</label>
    <type>Text</type>
</CustomField>