force-app/main/default/objects/Account_Membership__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>IF( Membership_Level__c = &apos;Practice&apos;, Practice_Level_Membership_Assignment__r.Expiration_Date__c,
				IF(
    NOT(ISBLANK(Account_Assignment_Date__c)),
    ADDMONTHS(Account_Assignment_Date__c, 12),
    ADDMONTHS(DATEVALUE(CreatedDate) , 12)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>