force-app/main/default/objects/Account_Membership__c/fields/Historical_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Historical_End_Date__c</fullName>
    <label>Historical End Date</label>
    <type>Date</type>
</CustomField>