force-app/main/default/objects/Account_Membership__c/fields/Historical_Membership__c.field-meta.xml
<CustomField>
    <fullName>Historical_Membership__c</fullName>
    <label>Historical Membership</label>
    <length>20</length>
    <type>Text</type>
</CustomField>