force-app/main/default/objects/Account_Membership__c/fields/Historical_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Historical_User_Id__c</fullName>
    <label>Historical User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>