force-app/main/default/objects/Account_Membership__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <formula>Membership__r.Job_Id__c</formula>
    <label>Job Id</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>