force-app/main/default/objects/Account_Membership__c/fields/Last_Buyer_Groups_Assignment_Exception__c.field-meta.xml
<CustomField>
    <fullName>Last_Buyer_Groups_Assignment_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Buyer Groups Assignment Exception</label>
    <referenceTo>B2B_Custom_Exception__c</referenceTo>
    <relationshipLabel>Individual Membership Assignments</relationshipLabel>
    <relationshipName>Individual_Membership_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>