force-app/main/default/objects/Account_Membership__c/fields/Last_Schoox_Job_Assignment_Exception__c.field-meta.xml
<CustomField>
    <fullName>Last_Schoox_Job_Assignment_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Schoox Job Assignment Exception</label>
    <referenceTo>B2B_Custom_Exception__c</referenceTo>
    <relationshipLabel>Individual Membership Assignments (Last Schoox Job Assignment Exception)</relationshipLabel>
    <relationshipName>Individual_Membership_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>