force-app/main/default/objects/Account_Membership__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Individual Level Memberships</relationshipLabel>
    <relationshipName>Account_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>