force-app/main/default/objects/Account_Membership__c/fields/Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Membership_Level__c</fullName>
    <formula>TEXT(Membership__r.Membership_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Level</label>
    <type>Text</type>
</CustomField>