force-app/main/default/objects/Account_Membership__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Memberships (Parent Id)</relationshipLabel>
    <relationshipName>Parent_Account_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>