force-app/main/default/objects/Account_Membership__c/fields/Practice_Level_Membership_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Practice_Level_Membership_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice Level Membership Assignment</label>
    <referenceTo>Practice_Level_Membership_Assignment__c</referenceTo>
    <relationshipLabel>Individual Membership Assignments</relationshipLabel>
    <relationshipName>Individual_Membership_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>