force-app/main/default/objects/Account_Membership__c/fields/Previous_Membership__c.field-meta.xml
<CustomField>
    <fullName>Previous_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Membership</label>
    <referenceTo>Account_Membership__c</referenceTo>
    <relationshipLabel>Individual Membership Assignments</relationshipLabel>
    <relationshipName>Individual_Membership_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>