force-app/main/default/objects/Account_Membership__c/fields/Purchase_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Account_Name__c</fullName>
    <formula>Purchaser_Account__r.FirstName + &quot; &quot; + Purchaser_Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser Account Name</label>
    <type>Text</type>
</CustomField>