force-app/main/default/objects/Account_Membership__c/fields/Purchaser_Account__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchaser Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Memberships1</relationshipName>
    <type>Lookup</type>
</CustomField>