force-app/main/default/objects/Account_Membership__c/fields/Related_Course_Completion__c.field-meta.xml
<CustomField>
    <fullName>Related_Course_Completion__c</fullName>
    <label>Related Course Completion %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>