force-app/main/default/objects/Account_Membership__c/fields/Renewable__c.field-meta.xml
<CustomField>
    <fullName>Renewable__c</fullName>
    <formula>Membership__r.Renewable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewable</label>
    <type>Checkbox</type>
</CustomField>