force-app/main/default/objects/Account_Membership__c/fields/Renewal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Amount__c</fullName>
    <label>(Deprecated) Renewal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>