force-app/main/default/objects/Account_Membership__c/fields/Renewed_Membership__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewed Membership</label>
    <referenceTo>Account_Membership__c</referenceTo>
    <relationshipLabel>Individual Membership Assignments (Renewed Membership)</relationshipLabel>
    <relationshipName>ILMAs_Renewed</relationshipName>
    <type>Lookup</type>
</CustomField>