force-app/main/default/objects/Account_Membership__c/fields/Send_Renewal_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Send_Renewal_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Renewal Reminder</label>
    <type>Checkbox</type>
</CustomField>