force-app/main/default/objects/Account_Membership__c/fields/SF_Historical_Membership__c.field-meta.xml
<CustomField>
    <fullName>SF_Historical_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Historical Membership</label>
    <referenceTo>Historical_Membership__c</referenceTo>
    <relationshipLabel>Individual Membership Assignments</relationshipLabel>
    <relationshipName>Individual_Membership_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>