force-app/main/default/objects/Account_Membership__c/fields/SX_LMS_User__c.field-meta.xml
<CustomField>
    <fullName>SX_LMS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SX LMS User</label>
    <referenceTo>SX_LMS_User__c</referenceTo>
    <relationshipLabel>Individual Membership Assignments</relationshipLabel>
    <relationshipName>Individual_Membership_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>