force-app/main/default/objects/Account_Membership__c/fields/Welcome_Kit_Status__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Kit_Status__c</fullName>
    <label>Certification Kit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Unclaimed</fullName>
            </value>
            <value>
                <fullName>Claimed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>