force-app/main/default/objects/Account_Membership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Id__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Assignment_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Membership_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>